syntax = "proto3";

package grpcServices;

option csharp_namespace = "grpcServices";

enum BloodType {
	APlus = 0;
	AMinus = 1;
	BPlus = 2;
	BMinus = 3;
	OPlus = 4;
	OMinus = 5;
	ABPlus = 6;
	ABMinus = 7;
}

message UrgentBloodTransferRequest {
	BloodType bloodType = 1;
	uint32 amount = 2;
}

message UrgentBloodTransferResponse {
	// string apiKey = 1;
	bool hasBlood = 1;
}